# doorctl

./: CMakeLists.txt  README.md
.github/workflows/: android-deploy.yml  api-deploy.yml
api/access/: index.mts  index.ts  package-lock.json  package.json
device/: CMakeLists.txt
device/src/: ble.c  ble.h  btstack_config.h  device.c  device.h  doorctl.gatt  driver.c  driver.h  error.c  error.h  lwipopts.h  main.c  splash.s
mobile/: package-lock.json  package.json
mobile/src/: App.vue  main.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: lib.rs
mobile/src/auth/: user.ts
mobile/src/component/: CircleButton.vue
mobile/src/style/: global.scss
src/: device.h  driver.c  error.c  error.h  main.c
